objects/Test1__c.object
<CustomObject><fields>
        <fullName>Formula1__c</fullName>
        <formula>Test2__r.Numbr1__c +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Hello__c</fullName>
        <defaultValue>$Label.Helllo</defaultValue>
        <label>Hello</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>NewText__c</fullName>
        <label>NewText</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Test2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test2</label>
        <referenceTo>Test2__c</referenceTo>
        <relationshipLabel>Test1</relationshipLabel>
        <relationshipName>Test1</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Test1</label><nameField>
        <label>Test1 Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Test1</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>